[gd_scene load_steps=34 format=2]

[ext_resource path="res://images/characters/mages/herochar_idle_anim_strip_4.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Mage.gd" type="Script" id=2]
[ext_resource path="res://images/characters/mages/herochar_run_anim_strip_6.png" type="Texture" id=3]
[ext_resource path="res://images/crosshairs/Crosshair16.png" type="Texture" id=4]
[ext_resource path="res://src/weapons/HeldWeapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/characters/mages/herochar_jump_up_anim_strip_3.png" type="Texture" id=6]
[ext_resource path="res://images/characters/mages/herochar_jump_down_anim_strip_3.png" type="Texture" id=7]
[ext_resource path="res://src/helpers/Label.gd" type="Script" id=8]
[ext_resource path="res://images/crosshairs/arrowRight.png" type="Texture" id=9]
[ext_resource path="res://fonts/Pixels TEXT.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://images/weapons/spear/spear.png" type="Texture" id=11]
[ext_resource path="res://images/weapons/orb/orb_anim_strip_6.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "jump_up",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "jump_down",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 3.40263, 10 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 10 )

[node name="Mage" type="KinematicBody2D" groups=[
"characters",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.45196, 0.821745 )
scale = Vector2( 1, 0.72 )
shape = SubResource( 18 )

[node name="Labels" type="Node2D" parent="."]

[node name="NameLabel" type="Label" parent="Labels"]
margin_left = -19.7033
margin_top = -31.3539
margin_right = 20.2967
margin_bottom = -6.35391
custom_fonts/font = SubResource( 19 )
text = "Mage"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="Labels"]
margin_left = -11.7325
margin_top = -19.2574
margin_right = 12.2675
margin_bottom = -5.25743
custom_fonts/font = SubResource( 20 )
text = "100"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -18.8098
margin_top = -32.3885
margin_right = 20.1902
margin_bottom = -18.3885
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 21 )
text = "LABEL"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
is_on = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -35.2228 )
current = true

[node name="CrosshairPivot" type="Position2D" parent="."]
show_behind_parent = true

[node name="Crosshair" type="Sprite" parent="CrosshairPivot"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 25.7901, -0.0833325 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Arrow" type="TextureProgress" parent="CrosshairPivot"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.20698
margin_top = -4.99833
margin_right = 106.207
margin_bottom = 95.0017
rect_scale = Vector2( 0.3, 0.1 )
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 0.509804, 0.666667, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="Position2D" parent="CrosshairPivot"]
position = Vector2( 8.56905, -0.732395 )

[node name="Bomb" parent="CrosshairPivot/Weapons" instance=ExtResource( 5 )]
visible = false

[node name="Spear" parent="CrosshairPivot/Weapons" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1.46132, 0.36533 )
rotation = -1.5708
texture = ExtResource( 11 )
region_enabled = false

[node name="Orb" parent="CrosshairPivot/Weapons" instance=ExtResource( 5 )]
position = Vector2( 0.126373, -0.168497 )
texture = ExtResource( 12 )
region_rect = Rect2( 40, 0, 8, 8 )

[node name="Audio" type="Node2D" parent="."]

[node name="LaunchAudio" type="AudioStreamPlayer2D" parent="Audio"]

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
